# slice

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  TODO.md  bench_dt.sh  contdice.opam  dune-project  gen.py  ref_toggle.cdice  run.sh  run_contdice.sh  run_docker.sh  run_examples.sh  run_slice.sh  slice.py  test.py  test_flip_flag.cdice  test_refactor.cdice
cdice/: README.md  contdice.opam  dune-project  run.sh  run_cdice.sh  test_boolean.cdice  test_complex.cdice  test_inference.cdice  test_invalid.cdice
cdice/examples/: adversarial2.cdice  adversarial5.cdice  all_distributions.cdice  avoid_dup.cdice  basic_arith.cdice  coin.cdice  discrete_and_uniform.cdice  discrete_dist.cdice  discrete_output.cdice  discrete_output_2.cdice  fix_reaches_zero.cdice  function.cdice  iterate_n_times.cdice  kevin.cdice  minimal.cdice  nested_let.cdice  no_discretization.cdice  observe_test.cdice  pairs.cdice  param_multi_const.cdice  param_multi_const_complex.cdice  param_multi_const_complex3.cdice  param_multi_const_simple.cdice  param_multi_const_simple3.cdice  param_multi_const_simple4.cdice  two_comp.cdice
cdice/examples/invalid_tests/: gamma_zero_scale.cdice  gaussian_negative_sigma.cdice  uniform_reversed_bounds.cdice
cdice/examples/tests/: test_discretize_fallback.cdice  test_functions_hof_return.cdice  test_pairs_samples.cdice
cdice/lib/: .ocamlformat  ast.ml  ast.mli  bag.ml  bag.mli  bags.ml  contdice.ml  discretization.ml  distributions.ml  dune  inference.ml  interp.ml  lexer.mll  parse.ml  parser.mly  pretty.ml  runtime_values.ml  runtime_values.mli  stats.ml  to_dice.ml  type_system.ml  type_system.mli  typed_ast.ml  typed_ast.mli  types.ml  util.ml
cdice/test/: dune  test_contdice.ml  test_stats.ml
dice/: dune-project  (+1 more)
slice/: Dockerfile  README.md  TODO.md  dune-project  run_slice.sh  slice.opam
slice/examples/: adversarial1.slice  discrete_and_uniform.slice  discrete_output_1.slice  dont_discretize_returned_values.slice  kevin.slice  list_map.slice  list_map_all.slice  minimal.slice  nested_if.slice  param_multi_const_complex.slice  param_multi_const_complex2.slice  param_multi_const_simple2.slice  simple_test.py  simple_test.slice
slice/examples/invalid_tests/: beta_negative_parameters.slice  exponential_negative_lambda.slice  laplace_negative_scale.slice
slice/lib/: ast.ml  bags.ml  discretization.ml  distributions.ml  dune  inference.ml  lexer.mll  parser.mly  pretty.ml  to_dice.ml  to_roulette.ml  types.ml  util.ml
slice/test/: dune  test_slice.ml
(+236 files in other folders)
